  [dennisjan]
+ Added feature to parse a directory name by a template. [dennisjan]
+ Added selected record override to atkManyToOneRelation and Usage: create 
  a function named <attribname>_selected($record, $mode) in your node,
  enable AF_MANYTOONE_LAZY and return the selected record. [Peter]
+ Added true test database support incl. support for fixtures. [Rene,Peter]
* When updateDb fails it has to return false in stead of true. [dennisjan]
* Bugfix in atknode, atkmlsplitter and atkManyToOneRelation
  (m_joinaliases removed from the code) [Sandy, Peter]
* Bugfix in atkImportHandler (in_array takes 2 params, not 1). [Harrie]
* Fixed minor html/4.01 transitional compatibility issue in atkPage. [Guido]
* A password should only be generated if a username is given. [Guido]
* Added the auth_enablepasswordmailer var to the template so login,tpl
  can now detect if it should show the Password forgotten button. [Guido]
* Replaced tbsooo's meth_misc_alert calls by atkerror statements to
  improve debugging. [Guido]
* Fixed bug in tbsooo which caused the SaveXmlToDoc function to fail due to
  the -u option in the zip command (thanks Dennis-Jan for pointing me into
  this direction). [Guido]
* Fixed bug in atkMssqlQuery, it no longer has an ambiguous column error
  when fields in an atkManyToOneRelation have the same name as fields in
  the master node. [Ivo]
* Fixed the atkFormatAttribute, it can now handle multiple delimiters. [Ivo]
* When encountering data that doesn't match the format in atkFormatAttribute,
  the expected format is now displayed in the error message. [Ivo]
* Fixed the login image of the macoslike theme. [Ivo]
* Bugfix: filenames need to be escaped before they are added to the db in
  the atkFileAttribute. [Sandy]
* When an atkFileAttribute is obligatory but somehow empty and no new file
  is uploaded, but an existing file is selected, the atkFileAttribute won't
  ignore this selection anymore. [Guido]